# Caramelo_workspace

./: .gitignore  99-caramelo-usb.rules  CORRECOES_APLICADAS.md  FIXES_NAVEGACAO_2025-07-15.md  MANUAL_3_TERMINAIS.md  MAPEAMENTO_ANTIFRAGIL.md  NAVEGACAO_AUTONOMA.md  NAVEGACAO_AUTONOMA_NOVO.md  ORGANIZACAO_FINAL.md  README.md  SESSAO_RESUMO_COMPLETO.md  SISTEMA_COMPLETO.md  SISTEMA_MAPEAMENTO_SEGURO.md  SISTEMA_REORGANIZADO.md  arena_state.yaml  checkpoints.json  frames_2025-07-15_14.13.06.gv  frames_2025-07-15_21.31.16.gv  frames_2025-07-18_13.52.50.gv  frames_2025-07-19_09.10.37.gv  mapa_20250704_145039.yaml  navigation_log_novo.txt  navigation_logs.txt  prompt.md  simple_navigator.py  slam_logs.txt  tasks_da_bag.py  test_waypoints.py  untitled.m
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
log/: latest_build
maps/: mapa_manual_seguro_20250702_185219.pgm  mapa_manual_seguro_20250702_185219.yaml
maps/arena_fei/: map.pgm  map.yaml  mission.yaml  waypoints.json  waypoints_simple.json
maps/arena_robocup25/: map.pgm  map.yaml  mission.yaml  waypoints.json  workstations.json
maps/hotel/: map.pgm  map.yaml  waypoints.json
maps/teste_lab/: mission.yaml  waypoints.json  workstations.json
maps/teste_robocup25/: map.pgm  map.yaml  waypoints.json
src/caramelo_bagparser/: output.yaml  package.xml  setup.py
src/caramelo_bagparser/launch/: parse_bag.launch.py
src/caramelo_bagparser/matlab/: process_bagfile.m
src/caramelo_bagparser/scripts/: bag.sh
src/caramelo_bringup/: README.md  SISTEMA_INICIALIZACAO.md  package.xml  setup.py
src/caramelo_bringup/caramelo_bringup/: caramelo_hw_interface_node.py  encoder_joint_state_node.py  encoder_reader_node.py  goal_tester.py  odometry_fusion_node.py  particle_filter_node.py  pwm_controller_node.py  robust_odometry_node.py  twist_converter_node.py  zed_imu_driver.py
src/caramelo_bringup/config/: encoder_config.yaml  encoder_params.yaml  laser_filter_config.yaml  motor_params.yaml  robot_controllers.yaml  robust_odometry_config.yaml
src/caramelo_bringup/launch/: actuators_bringup.launch.py  basic_visualization.launch.py  competition.launch.py  encoder_bringup.launch.py  imu_zed_bringup.launch.py  lidar_bringup.launch.py  odometry_bringup.launch.py  odometry_fusion.launch.py  pwm_bringup.launch.py  robot_state.launch.py  sensors.launch.py  system.launch.py  teleop_keyboard.launch.py  visualization_bringup.launch.py  zed_imu_bringup.launch.py
src/caramelo_bringup/rviz/: caramelo_basic.rviz  caramelo_basic_visualization.rviz  caramelo_complete.rviz  caramelo_navigation.rviz
src/caramelo_bringup/urdf/: caramelo_real.urdf.xacro
src/caramelo_manipulation/: package.xml  setup.cfg  setup.py
src/caramelo_navigation/: INTEGRATION_TEMPLATE.py  NAVEGACAO_AUTONOMA.md  README.md  README_NOVO.md  README_REORGANIZED.md  README_backup.md  package.xml  (+2 more)
venv310/: pyvenv.cfg
(+167 files in other folders)
