<?xml version="1.0"?>
<package format="3">
  <name>caramelo_bagparser</name>
  <version>0.0.1</version>
  <description>Processamento de bag ROS via MATLAB</description>

  <maintainer email="seu@email.com">Seu Nome</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
